[workspace]
resolver = "2"
members = [
    # core ibc implementation
    "ibc/derive",
    "ibc/modules",
    "ibc/proto",
    "ibc/proto-compiler",

    # ibc contracts for different blockchain runtimes
    "contracts/pallet-ibc/ping",
    "contracts/pallet-ibc/primitives",
    "contracts/pallet-ibc/rpc",
    "contracts/pallet-ibc/runtime-api",
    "contracts/pallet-ibc",
    "contracts/pallet-ibc/simple-iavl",

    # algorithms
    "algorithms/beefy/verifier",
    "algorithms/beefy/prover",
    "algorithms/beefy/primitives",
    "algorithms/grandpa/verifier",
    "algorithms/grandpa/prover",
    "algorithms/grandpa/primitives",

    # ibc light clients
    "light-clients/common",
    "light-clients/ics07-tendermint",
    "light-clients/ics07-tendermint-cw",
    "light-clients/ics08-wasm",
    "light-clients/ics10-grandpa",
    "light-clients/ics10-grandpa-cw",
    "light-clients/ics11-beefy",
    "light-clients/ics13-near",

    # hyperspace
    "hyperspace",
    "hyperspace/core",
    "hyperspace/primitives",
    "hyperspace/parachain",
    "hyperspace/cosmos",
    "hyperspace/testsuite",
    "hyperspace/metrics",

    # utilities
    "utils/subxt/codegen",
    "utils/subxt/generated",
    "utils/parachain-node",
    "utils/parachain-node/runtime",
    #     "utils/simnode"
]

[patch."https://github.com/paritytech/jsonrpsee"]
jsonrpsee = { version = "=0.16.2" }

[patch."https://github.com/paritytech/substrate"]
sc-executor = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-executor-common = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-api-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-core-hashing = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-externalities = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-io = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-keyring = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-keystore = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-panic-handler = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-state-machine = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-std = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-storage = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-tracing = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-trie = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-timestamp = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-version = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-version-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-weights = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-aura = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-babe = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-system = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
# beefy-gadget = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
# beefy-gadget-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-beefy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-beefy-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
binary-merkle-tree = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
fork-tree = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-election-provider-solution-type = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-executive = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-support = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
mmr-gadget = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
mmr-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-assets = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-authorship = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-bags-list = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-balances = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-beefy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-beefy-mmr = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-bounties = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-child-bounties = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-collective = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-conviction-voting = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-democracy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-fast-unstake = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-identity = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-im-online = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-indices = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-membership = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-mmr = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-multisig = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-nis = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-nomination-pools = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-offences = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-preimage = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-proxy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-ranked-collective = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-recovery = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-referenda = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-session = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-session-benchmarking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-society = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-staking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-staking-runtime-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-state-trie-migration = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-sudo = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-tips = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-treasury = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-utility = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-vesting = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
pallet-whitelist = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-block-builder = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-chain-spec-derive = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-cli = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-client-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-client-db = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
# sc-finality-grandpa = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
# sc-finality-grandpa-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-grandpa = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-informant = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-keystore = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-network = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-network-bitswap = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-network-common = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-network-light = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-network-sync = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-network-transactions = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-offchain = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-peerset = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-proposer-metrics = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-service = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-state-db = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-storage-monitor = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-sysinfo = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-telemetry = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-tracing = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-tracing-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sc-utils = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
# sp-beefy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-consensus-beefy = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-block-builder = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-blockchain = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-consensus = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-core-hashing-proc-macro = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-database = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
# sp-finality-grandpa = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-consensus-grandpa = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-inherents = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-mmr-primitives = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-offchain = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-session = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-staking = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate.git", branch = "polkadot-v0.9.40" }

[profile.release]
overflow-checks = true
